--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@
     margin: 0 3px;
     cursor: pointer;
 }
+.btn-sm{
+    font-size: 17px;
+    padding: 10px 19px;
+    margin: 12px0;
+}
 .btn:hover{
     background-color: white;
     color:blue;
@@ -108,6 +113,7 @@
     font-size: 11px;
     color: midnightblue;
     margin: 0 5px;
+    padding: 3px 0 0 0;
 }
 #form-check{
     flex-direction: row;
